--- a/image.html
+++ b/image.html
@@ -18,7 +18,7 @@
       </div>
       <section class="section1">
         <div class="main">
-          <img src="/image/monkey.jpg" alt="Aadhar Picture" />
+          <img src="image/monkey.jpg" alt="Aadhar Picture" />
           <h2>You are looking so Beautiful 😁</h2>
         </div>
       </section>
